fixing warnings